# TwitterClone

./: README.md  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
setup/: settings.py
twitter/: urls.py  views.py
